# hades

./: .gitattributes  Cargo.toml  LICENSE  README.md  TYPE_CHECKER_IMPLEMENTATION.md  build.rs
.cargo/: config.toml
.github/workflows/: examples.yml  release.yml
.tangled/workflows/: ci.yml
benches/: lexer_bench.rs  parser_bench.rs
crates/hades/: Cargo.toml
crates/hades-ast/: Cargo.toml
crates/hades-ast/src/: lib.rs  scope.rs
crates/hades-ast/src/ast/: mod.rs  stmt.rs  types.rs  value.rs
crates/hades-ast/src/ast/expr/: assignment.rs  mod.rs
crates/hades-ast/src/ast/walk/: mod.rs  walk_as.rs  walk_block.rs  walk_break.rs  walk_continue.rs  walk_defer.rs  walk_expr.rs  walk_for.rs  walk_func.rs  walk_if.rs  walk_import.rs  walk_let.rs  walk_moduledecl.rs  walk_null.rs  walk_program.rs  walk_return.rs  walk_stmt.rs  walk_structdef.rs  walk_value.rs  walk_while.rs
crates/hades-ast/src/ast/walk/call/: func.rs  method.rs  qualified.rs
crates/hades-ast/src/typed_ast/: ast.rs  builtins.rs  function.rs  ident.rs  meta.rs  mod.rs  struc.rs  value.rs
crates/hades-ast/src/typed_ast/expr/: assign.rs  mod.rs
crates/hades-codegen/: Cargo.toml
crates/hades-codegen/src/codegen/: context.rs  error.rs  mod.rs  symbols.rs  traits.rs  types.rs
crates/hades-codegen/src/codegen/builtin/: len.rs  mod.rs
crates/hades-codegen/src/codegen/llvm/visit/: array_literal.rs  block.rs  break_stmt.rs  continue_stmt.rs  defer.rs  for_stmt.rs  func_def.rs  if_stmt.rs  let_stmt.rs  mod.rs  program.rs  return_stmt.rs  stmt.rs  struct_def.rs  value.rs  while_stmt.rs
crates/hades-codegen/src/codegen/llvm/visit/expr/: asexpr.rs  assign.rs  binary.rs  mod.rs  struct_init.rs  unary.rs  variable.rs
crates/hades-codegen/src/codegen/llvm/visit/expr/call/: func.rs  method.rs  mod.rs
crates/hades-common/: Cargo.toml
crates/hades-common/src/: consts.rs  lib.rs
crates/hades-compiler/: Cargo.toml
crates/hades-compiler/src/compiler/: mod.rs
crates/hades-error/: Cargo.toml
crates/hades-error/src/: lib.rs  semantic_error.rs
crates/hades-lexer/: Cargo.toml
crates/hades-lexer/src/: lib.rs  stdlib.rs
crates/hades-mir/: Cargo.toml
crates/hades-mir/src/: builder.rs  id.rs  lib.rs  types.rs
crates/hades-mir/src/mir/: block.rs  builder.rs  cfg.rs  decl.rs  expr.rs  func.rs  guard.rs  local.rs  lower_stmt.rs  mod.rs  module.rs  operand.rs  place.rs  print.rs  program.rs  rvalue.rs  stmt.rs  terminator.rs
crates/hades-mir/tests/: print.rs
crates/hades-module/: Cargo.toml
crates/hades-module/src/module/: error.rs  loader.rs  mod.rs  registry.rs  resolver.rs  typed.rs
crates/hades-parser/: Cargo.toml
crates/hades-semantic/: Cargo.toml
crates/hades-semantic/src/: analyzer.rs  error.rs  lib.rs  signatures.rs  typed_module.rs
crates/hades-semantic/src/evaluator/: graph.rs
crates/hades-semantic/src/lint/: array_bounds.rs  mod.rs  null_deref.rs
crates/hades-tokens/: Cargo.toml
crates/hades-tokens/src/: ident.rs  lib.rs  name.rs  op.rs  param_kind.rs  selff.rs
crates/hades/src/: main.rs
examples/: arrays.hd  assign.hd  field_access.hd  field_access_complete.hd  for.hd  hello_world.hd  if_else.hd
examples/analysis/array_dynamic_index/: main.hd
examples/analysis/array_out_of_bounds/: main.hd
examples/analysis/null_deref/: main.hd
examples/arrays/: arrays.hd
examples/arrays/array_simple/: .expected  main.hd
examples/arrays/arrays/: .expected  main.hd
examples/arrays/big_array/: .expected  main.hd
examples/arrays/string_array/: .expected  main.hd
examples/asexpr/: .expected  main.hd
examples/asexpr/char_to_num/: .expected  main.hd
examples/asexpr/float_to_int/: main.hd
examples/asexpr/int_to_float/: .expected  main.hd
examples/basics/: main.hd
examples/binary_search/: .expected  main.hd
examples/binary_tree/invert/: .expected  main.hd
examples/bplus_tree/: main.hd
examples/chained_imports/: base.hd  intermediate.hd  main.hd
examples/char/array/: .expected  main.hd
examples/char/normal/: .expected  main.hd
examples/control_flow/: .expected  main.hd
examples/defer/: main.hd
examples/defer/conditional_return/: .expected  main.hd
examples/defer/early_return/: .expected  main.hd
examples/defer/multiple_defers/: .expected  main.hd
examples/defer/multiple_statements/: .expected  main.hd
examples/defer/nested_functions/: .expected  main.hd
examples/local_modules/: main.hd  utils.hd
examples/loops/: for.hd
examples/mixed_imports/: calculator.hd  main.hd
examples/module_test/: main.hd
examples/modules/: modules.hd
examples/multi_modules/: helpers.hd  main.hd  math_ops.hd
examples/pointers/: .expected  main.hd
examples/same_name_diff_module/: .expected  circle.hd  main.hd  square.hd
examples/single_stmt/: .expected  main.hd
examples/struct_imports/: main.hd  math_ops.hd
examples/struct_static_import/: geometry.hd  main.hd
scripts/: generate_expected.sh  test_examples.sh
src/: consts.rs  lib.rs  main.rs  stdlib.rs
src/ast/: expr.rs  ident.rs  mod.rs  program.rs  stmt.rs  to_type.rs  types.rs  value.rs
src/cmd/: args.rs  cmd.rs  mod.rs
src/codegen/: context.rs  error.rs  mod.rs  options.rs  symbols.rs  traits.rs  types.rs
src/compiler/: mod.rs
src/error/: mod.rs  span.rs
src/evaluator/: graph.rs
src/lexer/: error.rs  mod.rs
src/macros/: mod.rs
src/module/: loader.rs  mod.rs  path.rs  registry.rs  resolver.rs
src/parser/: defer.rs  error.rs  func.rs  mod.rs  module.rs  stmt.rs  struct_.rs
src/semantic/: analyzer.rs  error.rs  mod.rs  scope.rs  tests.rs
src/tokens/: function_name.rs  ident.rs  macros.rs  mod.rs  name.rs  op.rs  param_kind.rs  selff.rs
src/typed_ast/: ast.rs  builtins.rs  expr.rs  function.rs  ident.rs  meta.rs  mod.rs  signatures.rs  struc.rs  value.rs
std/: io.hd  math.hd  time.hd
treesitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
treesitter/queries/: folds.scm  highlights.scm  indents.scm  locals.scm
treesitter/src/: grammar.json  node-types.json  parser.c
(+200 files in other folders)
