[package]
name = "hades"
version = "0.1.0"
edition = "2024"

[features]
default = []

[[bin]]
name = "hades"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0.100"
phf = { version = "0.11.3", features = ["macros"] }
indexmap = "2.11.4"
ariadne = "0.4"
once_cell = "1.21.3"
clap = { version = "4.5.50", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
inkwell = { version = "0.5.0", features = ["llvm18-0"], default-features = false}
derive_more = { version = "2.0.1", features = ["debug"] }
rayon = "1.11.0"
thiserror = "2.0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lexer_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false
