[workspace]
members = [
    "crates/hades-common",
    "crates/hades-tokens",
    "crates/hades-error",
    "crates/hades-ast",
    "crates/hades-lexer",
    "crates/hades-parser",
    "crates/hades-module",
    "crates/hades-semantic",
    "crates/hades-codegen",
    "crates/hades-compiler",
    "crates/hades",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.1"

[workspace.dependencies]
# Internal crates
hades-common  = { path = "crates/hades-common" }
hades-tokens  = { path = "crates/hades-tokens" }
hades-error   = { path = "crates/hades-error" }
hades-ast     = { path = "crates/hades-ast" }
hades-lexer   = { path = "crates/hades-lexer" }
hades-parser  = { path = "crates/hades-parser" }
hades-module  = { path = "crates/hades-module" }
hades-semantic = { path = "crates/hades-semantic" }
hades-codegen  = { path = "crates/hades-codegen" }
hades-compiler = { path = "crates/hades-compiler" }

# External crates
anyhow        = "1.0.100"
phf           = { version = "0.11.3", features = ["macros"] }
indexmap      = "2.11.4"
ariadne       = "0.6"
once_cell     = "1.21.3"
clap          = { version = "4.5.50", features = ["derive"] }
clap_derive   = { version = "4.0.0-rc.1" }
inkwell       = { git = "https://github.com/TheDan64/inkwell.git", rev = "4f4d09a57b26e581a532aec9457b332bfe6469dc", features = ["llvm21-1"] }
derive_more   = { version = "2.0.1", features = ["debug"] }
rayon         = "1.11.0"
thiserror     = "2.0.8"
memchr        = "2.7.6"
petgraph      = "0.6"
criterion     = { version = "0.5", features = ["html_reports"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
