[package]
name = "hades-ast"
edition.workspace = true
version.workspace = true

[dependencies]
hades-common  = { workspace = true }
hades-tokens  = { workspace = true }
hades-error   = { workspace = true }
indexmap      = { workspace = true }
derive_more   = { workspace = true }
once_cell     = { workspace = true }
phf           = { workspace = true }
