[package]
name = "hades-compiler"
edition.workspace = true
version.workspace = true

[dependencies]
hades-common   = { workspace = true }
hades-tokens   = { workspace = true }
hades-error    = { workspace = true }
hades-ast      = { workspace = true }
hades-lexer    = { workspace = true }
hades-parser   = { workspace = true }
hades-module   = { workspace = true }
hades-semantic = { workspace = true }
hades-codegen  = { workspace = true }
hades-mir      = { workspace = true }
inkwell        = { workspace = true }
ariadne        = { workspace = true }
