[package]
name = "hades-mir"
edition.workspace = true
version.workspace = true

[dependencies]
hades-ast     = { workspace = true }
hades-tokens  = { workspace = true }
hades-error   = { workspace = true }
hades-module  = { workspace = true }
indexmap      = { workspace = true }

[dev-dependencies]
hades-lexer    = { workspace = true }
hades-parser   = { workspace = true }
hades-semantic = { workspace = true }
