[package]
name = "hades-semantic"
edition.workspace = true
version.workspace = true

[dependencies]
hades-common   = { workspace = true }
hades-tokens   = { workspace = true }
hades-error    = { workspace = true }
hades-ast      = { workspace = true }
hades-module   = { workspace = true }
hades-mir      = { workspace = true }
rayon          = { workspace = true }
indexmap       = { workspace = true }
